--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lalit - Data Scientist Portfolio</title>
+    <title>Projects - Lalit's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,13 +12,11 @@
             padding: 0;
             background-color: #f4f4f4;
         }
-
         .container {
             width: 80%;
             margin: auto;
             overflow: hidden;
         }
-
         header {
             background: #333;
             color: #fff;
@@ -26,88 +24,49 @@
             min-height: 70px;
             border-bottom: #77aaff 3px solid;
         }
-
         header a {
             color: #fff;
             text-decoration: none;
             text-transform: uppercase;
             font-size: 16px;
         }
-
         header ul {
             padding: 0;
             list-style: none;
         }
-
         header ul li {
             display: inline;
             padding: 0 20px 0 20px;
         }
-
         header #branding {
             float: left;
         }
-
         header #branding h1 {
             margin: 0;
         }
-
         header nav {
             float: right;
             margin-top: 10px;
         }
-
-        #showcase {
-            min-height: 400px;
-            background: url('background.jpg') no-repeat 0 -400px;
-            text-align: center;
-            color: #fff;
-        }
-
-        #showcase h1 {
-            margin-top: 100px;
-            font-size: 55px;
-            margin-bottom: 10px;
-        }
-
-        #showcase p {
-            font-size: 20px;
-        }
-
-        .content {
-            padding: 15px;
-        }
-
-        .content h2 {
-            text-align: center;
-        }
-
-        .profile-image {
-            display: block;
-            margin: 0 auto;
-            width: 150px;
-            border-radius: 50%;
-        }
-
-        .skills,
         .projects {
-            margin: 20px 0;
+            padding: 15px;
+            background: #fff;
+            margin-top: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
-
-        .skills ul,
+        .projects h2 {
+            text-align: center;
+        }
         .projects ul {
             list-style: none;
             padding: 0;
         }
-
-        .skills ul li,
         .projects ul li {
             background: #e4e4e4;
             margin: 5px 0;
             padding: 10px;
             border-radius: 5px;
         }
-
         footer {
             text-align: center;
             padding: 20px;
@@ -117,7 +76,6 @@
         }
     </style>
 </head>
-
 <body>
     <header>
         <div class="container">
@@ -135,44 +93,22 @@
         </div>
     </header>
 
-    <section id="showcase">
-        <div class="container">
-            <h1>Welcome to My Portfolio</h1>
-            <p>Data Science Enthusiast | Proficient in Data Visualization, Excel, Programming</p>
-        </div>
-    </section>
-
-    <div class="content container">
-        <h2>About Me</h2>
-        <img src="lalit.png" alt="Lalit's Image" class="profile-image">
-        <p>Hello! I am Lalit, a passionate data science enthusiast continuously learning and honing my skills. I am
-            proficient in data visualization, Excel, and programming. I enjoy leveraging data science and machine
-            learning to drive innovation and solve complex problems.</p>
-
-        <div class="skills">
-            <h2>Skills</h2>
-            <ul>
-                <li>Data Visualization</li>
-                <li>Excel</li>
-                <li>Programming</li>
-                <li>Machine Learning</li>
-                <li>Data Analysis</li>
-            </ul>
-        </div>
-
-        <div class="projects">
-            <h2>Projects</h2>
-            <ul>
-                <li>Project 1: Description of project 1</li>
-                <li>Project 2: Description of project 2</li>
-                <li>Project 3: Description of project 3</li>
-            </ul>
-        </div>
+    <div class="projects container">
+        <h2>Projects</h2>
+        <ul>
+            <li>
+                <h3>Smart Dustbin</h3>
+                <p>A project aimed at creating a smart dustbin that automatically opens its lid when it detects motion.</p>
+            </li>
+            <li>
+                <h3>Adhunik Krishi</h3>
+                <p>An innovative project focused on modernizing agricultural practices using technology.</p>
+            </li>
+        </ul>
     </div>
 
     <footer>
         <p>Lalit &copy; 2024</p>
     </footer>
 </body>
-
 </html>
